cmake_minimum_required(VERSION 2.8 FATAL_ERROR)
project(lidarReg)
find_package(PCL 1.2 REQUIRED)
include_directories(${PCL_INCLUDE_DIRS} header_files)
link_directories(${PCL_LIBRARY_DIRS})
add_definitions(${PCL_DEFINITIONS})
file(GLOB SOURCES "src/*.cpp")
add_executable(lidarReg ${SOURCES})
target_link_libraries(lidarReg m)
target_link_libraries (lidarReg ${PCL_LIBRARIES})
